apps/configs/headlamp/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: headlamp
  namespace: headlamp
spec:
  hostnames:
  - headlamp.sandbox.internal
  parentRefs:
  - name: cilium-gtw
    namespace: kube-system
    sectionName: headlamp
  rules:
  - filters:
    - type: RequestRedirect
      requestRedirect:
        scheme: https
        statusCode: 301
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: headlamp-tls
  namespace: headlamp
spec:
  hostnames:
  - headlamp.sandbox.internal
  parentRefs:
  - name: cilium-gtw
    namespace: kube-system
    sectionName: headlamp-tls
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: headlamp
      port: 80
